--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-
+<meta name="google-site-verification" content="QLR9BC6igfEh8q5RBa7s4gdvFBgP3ED87Oqrtre9FDY" />
 <meta name="naver-site-verification" content="ff6c68045b38ad8f39b9b8d0d4d811c3de4fe7ac" />
 
     <meta charset="UTF-8">
