--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
 <meta name="naver-site-verification" content="ff6c68045b38ad8f39b9b8d0d4d811c3de4fe7ac" />
 
     <meta charset="UTF-8">
