--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <meta name="keywords" content="탈모판별기, 인공지능 탈모 테스트, 탈모, 탈모치료 , 원형탈모 , 원형탈모 테스트, 나의 탈모, 탈모 판별하기, M자탈모, hair loss, chute des cheveux, caída, del pelo, Pérdida de pelo, 인공지능 탈모, M자탈모테스트, 원형탈모 판별 , M자탈모 판별 , AI 원형탈모, AI M자탈모">
     <meta name="author" content="벨르">
     <link rel="stylesheet" href="style.css">
-    <link rel="canonical" href="https://haircheck.com" />
-    <meta property="og:url" content="https://haircheck.com" />
+    <link rel="canonical" href="https://haircheck.netlify.app/" />
+    <meta property="og:url" content="https://haircheck.netlify.app/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="탈모판별기" />
     <meta property="og:description" content="인공지능 탈모 판별 테스트, 나의 머리상태로 탈모를 확인해보세요! 사진 데이터로 학습한 인공지능이 나의 탈모를 판별해드립니다. 회원가입도 필요없이 화면에서 바로 확인해보세요! 사진 데이터는 그 어디에도 전송되지 않습니다. 인공지능으로 나의 탈모를 판별 해보세요! 원형탈모? M자탈모? 정상? 테스트를 통해 나의 탈모 지수를 판별 할 수 있습니다."
