--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <body>
     <nav class="p-3 container navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="https://haircheck.com">탈모판별기</a>
+        <a class="navbar-brand" href="https://haircheck.netlify.app/">탈모판별기</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
