--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta property="og:title" content="탈모판별기" />
     <meta property="og:description" content="인공지능 탈모 판별 테스트, 나의 머리상태로 탈모를 확인해보세요! 사진 데이터로 학습한 인공지능이 나의 탈모를 판별해드립니다. 회원가입도 필요없이 화면에서 바로 확인해보세요! 사진 데이터는 그 어디에도 전송되지 않습니다. 인공지능으로 나의 탈모를 판별 해보세요! 원형탈모? M자탈모? 정상? 테스트를 통해 나의 탈모 지수를 판별 할 수 있습니다."
     />
-    <meta property="og:image" content="hairloss/img/front.png" />
+    <meta property="og:image" content="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FckK6aC%2FbtqKSWy4d9f%2Ff50k2WKTbEhW5QtdeUZbS0%2Fimg.jpg" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5e64b3727e862b06"></script>
