--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+<script data-ad-client="ca-pub-4503389667108548" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <head>
 
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
