--- a/index.html
+++ b/index.html
@@ -2,20 +2,13 @@
 <html>
 <script data-ad-client="ca-pub-4503389667108548" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <head>
-
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-<link rel="icon" href="/favicon.ico" type="image/x-icon">
-
-<meta name="google-site-verification" content="QLR9BC6igfEh8q5RBa7s4gdvFBgP3ED87Oqrtre9FDY" />
-
-<meta name="naver-site-verification" content="ff6c68045b38ad8f39b9b8d0d4d811c3de4fe7ac" />
-
-    <meta charset="UTF-8">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>탈모판별기</title>
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<title>탈모판별기</title>
     <meta name="title" content="탈모판별기">
     <meta name="subject" content="인공지능 탈모판별기, 나의 탈모를 판별 해보세요!">
     <meta name="keywords" content="탈모판별기, 인공지능 탈모 테스트, 탈모, 탈모치료 , 원형탈모 , 원형탈모 테스트, 나의 탈모, 탈모 판별하기, M자탈모, hair loss, chute des cheveux, caída, del pelo, Pérdida de pelo, 인공지능 탈모, M자탈모테스트, 원형탈모 판별 , M자탈모 판별 , AI 원형탈모, AI M자탈모">
@@ -30,24 +23,38 @@
     <meta property="og:image" content="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FckK6aC%2FbtqKSWy4d9f%2Ff50k2WKTbEhW5QtdeUZbS0%2Fimg.jpg" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
+
+<meta name="google-site-verification" content="QLR9BC6igfEh8q5RBa7s4gdvFBgP3ED87Oqrtre9FDY" />
+
+<meta name="naver-site-verification" content="ff6c68045b38ad8f39b9b8d0d4d811c3de4fe7ac" />
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet">
+
+    
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5e64b3727e862b06"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </head>
 
-<body>
-    <nav class="p-3 container navbar navbar-expand-lg navbar-light">
+<body class="expansion-alids-init">
+    <nav class="p-3 container navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="https://haircheck.netlify.app/">탈모판별기</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">탈모판별기
-                        <span class="sr-only">(current)</span>
-                    </a>
-                </li>
-                <li class="nav-item active">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
                     <a class="nav-link" id="yotube-top-link" href="https://ravellostory.tistory.com/category/%EA%B1%B4%EA%B0%95">탈모 정보</a>
+      </li>
+                        <li class="nav-item active">
+                    <a class="nav-link" id="yotube-top-link" href="https://smartstore.naver.com/ravellolife/products/5108443929">탈모치료를 위한 시무 8조</a>
                 </li>
             </ul>
         </div>
