--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
             </ul>
         </div>
     </nav>
+<div class="drag2-text">
+                <img src="https://proxy.goorm.io//service/5f7bbc9383c32c08099c6647_dARb2mPMAV0PBRXMVPH.run.goorm.io/9080//file/load/robot-4205265_1280.png?path=d29ya3NwYWNlJTJGaGFpcmxvc3MlMkZpbWclMkZyb2JvdC00MjA1MjY1XzEyODAucG5n&docker_id=dARb2mPMAV0PBRXMVPH&secure_session_id=0tHs4aQZJ6T02S2PhZJR893mi79XR_dM" class="mt-5 upload" >
+               
+            </div>
     <section class="section">
         <h1 class="title">탈모 판별기</h1>
         <h2 class="subtitle">인공지능 탈모 테스트</h2>
@@ -109,6 +113,21 @@
             </div>
         </div>
     </div>
+    <div class="ad-banner">
+            <ins class="kakao_ad_area" style="display:none;" 
+ data-ad-unit    = "DAN-1k22ao8y90di9" 
+ data-ad-width   = "320" 
+ data-ad-height  = "100"></ins> 
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+  
+  
+   <ins class="kakao_ad_area" style="display:none;" 
+ data-ad-unit    = "DAN-1iv3rb6fnts1l" 
+ data-ad-width   = "300" 
+ data-ad-height  = "250"></ins> 
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+   </div>
+    
     <footer class="footer pt-5 container d-flex justify-content-center">
         <div>
             <p>&copy; 벨르 Belle 2020. All Rights Reserved. </p>
@@ -252,23 +271,7 @@
             }
         }
     </script>
-    <script>
-        function iosApp() {
-            document.getElementById("coupang").style.display="none";
-            $("#coupang ins").hide();
-            document.getElementById("addThis").style.display="none";
-            document.getElementById("disqus_thread").style.display="none";
-            var kakao = document.getElementsByClassName("kakao_ad_area");
-            for (var i = 0; i < kakao.length; i++) {
-              if(kakao[i]) {
-                  kakao[i].style.display="none";
-              }
-            }
-            document.getElementById("yotube-top-link").style.display="none";
-            document.getElementById("yotube-mid-link").style.display="none";
-            document.getElementById("yotube-bottom-link").style.display="none";
-        }
-    </script>
+
 </body>
 <!-- 
 image input box
