--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-178262528-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-178262528-2');
+</script>
 <script data-ad-client="ca-pub-4503389667108548" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <head>
     <!-- Required meta tags -->
@@ -60,7 +69,7 @@
         </div>
     </nav>
 <div class="drag2-text">
-                <img src="https://proxy.goorm.io//service/5f7bbc9383c32c08099c6647_dARb2mPMAV0PBRXMVPH.run.goorm.io/9080//file/load/robot-4205265_1280.png?path=d29ya3NwYWNlJTJGaGFpcmxvc3MlMkZpbWclMkZyb2JvdC00MjA1MjY1XzEyODAucG5n&docker_id=dARb2mPMAV0PBRXMVPH&secure_session_id=0tHs4aQZJ6T02S2PhZJR893mi79XR_dM" class="mt-5 upload" >
+                <img src="hairloss/img/robot-4205265_1280.png"/ class="mt-5 upload" >
                
             </div>
     <section class="section">
