--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
     </nav>
 <div class="drag2-text">
-                <img src="hairloss/img/robot-4205265_1280.png"/ class="mt-5 upload" >
+                <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FWXbL4%2FbtqK2Zii36c%2FKFt1oa2ba0jHJhknqEO0iK%2Fimg.png" class="mt-5 upload" >
                
             </div>
     <section class="section">
