--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </ul>
         </div>
     </nav>
-<div class="drag2-text">
+<div class="drag2">
                 <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FWXbL4%2FbtqK2Zii36c%2FKFt1oa2ba0jHJhknqEO0iK%2Fimg.png" class="mt-5 upload" >
                
             </div>
@@ -122,20 +122,16 @@
             </div>
         </div>
     </div>
-    <div class="ad-banner">
-            <ins class="kakao_ad_area" style="display:none;" 
- data-ad-unit    = "DAN-1k22ao8y90di9" 
- data-ad-width   = "320" 
- data-ad-height  = "100"></ins> 
-<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
-  
-  
-   <ins class="kakao_ad_area" style="display:none;" 
- data-ad-unit    = "DAN-1iv3rb6fnts1l" 
- data-ad-width   = "300" 
- data-ad-height  = "250"></ins> 
-<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
-   </div>
+
+ 
+<a href="https://bit.ly/35Ethbx"  >
+	<img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fd9ujwA%2FbtqLW8d3wdc%2F2jGh8izxLnaGZkKZTYwrFk%2Fimg.png" width="220" height="220" alt="위의 이미지를 누르면 연결됩니다.">
+<a>
+    </a>
+  <a href="https://bit.ly/2HHakfI"  >
+	<img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FcLH6eM%2FbtqLTydsVrW%2FOuxJlpzV8yU4TeKsvibvvK%2Fimg.png" width="220" height="220" alt="위의 이미지를 누르면 연결됩니다.">
+<a>
+    </a>
     
     <footer class="footer pt-5 container d-flex justify-content-center">
         <div>
