--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@
             </div>
         </div>
     </div>
-
+<div style="text-align : center;">
  
 <a href="https://bit.ly/35Ethbx"  >
-	<img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fd9ujwA%2FbtqLW8d3wdc%2F2jGh8izxLnaGZkKZTYwrFk%2Fimg.png" width="220" height="220" alt="위의 이미지를 누르면 연결됩니다.">
+	<img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fd9ujwA%2FbtqLW8d3wdc%2F2jGh8izxLnaGZkKZTYwrFk%2Fimg.png" width="220" height="220" margin="0" alt="위의 이미지를 누르면 연결됩니다.">
 <a>
     </a>
   <a href="https://bit.ly/2HHakfI"  >
-	<img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FcLH6eM%2FbtqLTydsVrW%2FOuxJlpzV8yU4TeKsvibvvK%2Fimg.png" width="220" height="220" alt="위의 이미지를 누르면 연결됩니다.">
+	<img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FcLH6eM%2FbtqLTydsVrW%2FOuxJlpzV8yU4TeKsvibvvK%2Fimg.png" width="220" height="220" margin="0" alt="위의 이미지를 누르면 연결됩니다.">
 <a>
     </a>
     
